# code_popupcad

./: .gitignore  .travis.yml  CONTRIBUTORS  HEADER  HEADER.txt  LICENSE  LICENSE.txt  README  README.markdown  build_mac.py  build_mac.sh  build_mac2.py  build_windows.py  build_windows_exe.bat  build_windows_installer.bat  clear_compiled.py  get_popupcad.sh  install_dependencies.sh  popupcad.py  popupcad.py~  popupcad_deprecated.py  register_associations_code.bat  register_associations_program.bat  settings.popupcad  setup.py  upgrade_tool.py
api_examples/: __init__.py  constraint_check.py  design_advanced_functions.py  design_file_connections.py  dxf_import_all_layers.py  get_mass_properties.py  load_file2.py  load_sketch.py  merge_designs.py  profile_sketcher.py  programmatic_generation.py  split_design.py  switch_subdesign.py  test_tilepart_widget.py  upgrade_script.py  upgrade_tool.py
dev_tools/: __init__.py  acyclicdirectedgraph.py  constraints.py  enum.py  genericfile.py  hierarchy.py  process_manager.py  project_structure.yaml  propertyeditor.py  text_to_polygons.py  virtual_structure.py
mac_build_stuff/: modifydll.py  run.sh  test.sh  untitled2.py
manufacturing_plugins/: __init__.py
popupcad/: __init__.py  basic_functions.py  dev_tools_migration.py  global_settings.py  readjoints.py  readjoints_pydy.py
popupcad_deprecated/: __init__.py  autoweb3.py  bufferop2.py  cleanup.py  customshapely.py  cutop.py  (+32 more)
popupcad_gazebo/gazebo_plugins/: CMakeLists.txt  model_vel.cc
popupcad_gazebo/gazebo_plugins/msgs/: CMakeLists.txt  Makefile  velocity_message.proto
(+312 files in other folders)
